:memo: Add iframe test
-Add test whith iframe who try to access site with security and not allow to access by iframes

--- a/Exercicios/Ex024/iframe.html
+++ b/Exercicios/Ex024/iframe.html
@@ -9,10 +9,14 @@
   <main>
     <h1>Title</h1>
 
-    <p>Acessando o site:</p>
+    <p>Acessando o site do curso em vídeo:</p>
 
     <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
+    <hr>
 
+    <p>Acessando site com <em>proteção</em> contra iframe</p>
+    <iframe src="https://www.google.com.br" frameborder="0"></iframe>
+    <hr>
   </main>
 </body>
 </html>
