:memo: Add link para redirecionar - Caso navegador ñ seja disponivel, ele cria um link para redirecionar para a pagina citada - Cria um link para abrir em uma outra aba

--- a/Exercicios/Ex024/iframe.html
+++ b/Exercicios/Ex024/iframe.html
@@ -11,11 +11,15 @@
 
     <p>Acessando o site do curso em vídeo:</p>
 
-    <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
+    <iframe src="https://www.cursoemvideo.com/" frameborder="0">
+      <a href="https://www.cursoemvideo.com/" target="_blank">Curso em vídeo</a>
+    </iframe>
     <hr>
 
     <p>Acessando site com <em>proteção</em> contra iframe</p>
-    <iframe src="https://www.google.com.br" frameborder="0"></iframe>
+    <iframe src="https://www.google.com.br" frameborder="0">
+      <a href="https://www.google.com.br" target="_blank">no Google</a>
+    </iframe>
     <hr>
   </main>
 </body>
