--- a/Exercicios/Ex024/iframe.html
+++ b/Exercicios/Ex024/iframe.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><IFrame></IFrame></title>
+  <title> I Frame</title>
+  <style>
+    iframe {
+      height: 400px;
+      width: 400px;
+      border: 1px solid black;
+    }
+  </style>
 </head>
 <body>
   <main>
@@ -11,14 +18,15 @@
 
     <p>Acessando o site do curso em vídeo:</p>
 
+      <!-- Tamanho padrão 300x150 [pode ser setado height and width] -->
     <iframe src="https://www.cursoemvideo.com/" frameborder="0">
       <a href="https://www.cursoemvideo.com/" target="_blank">Curso em vídeo</a>
     </iframe>
     <hr>
 
     <p>Acessando site com <em>proteção</em> contra iframe</p>
-    <iframe src="https://www.google.com.br" frameborder="0">
-      <a href="https://www.google.com.br" target="_blank">no Google</a>
+    <iframe src="https://www.facilita.vc" frameborder="0">
+      <a href="https://www.facilita.vc" target="_blank">na Facilita</a>
     </iframe>
     <hr>
   </main>
