:star: Add new file - New file add to continue the study and test

--- a/Exercicios/Ex024/iframe2.html
+++ b/Exercicios/Ex024/iframe2.html
@@ -16,7 +16,7 @@
   <main>
     <h1>Title</h1>
 
-    <p>Acessando o site do curso em vídeo:</p>
+    <p>Acessando o site da Facilita</p>
 
       <!-- Tamanho padrão 300x150 [pode ser setado height and width] -->
     <iframe src="pagina001.html" frameborder="0">
