--- a/Exercicios/Ex024/iframe3.html
+++ b/Exercicios/Ex024/iframe3.html
@@ -24,7 +24,7 @@
     </p>
     <ul>
       <li><a href="pages/pagina001.html" target="frame">Pagina 1</a></li>
-      <li><a href="">Pagina 2</a></li>
+      <li><a href="pages/pagina002.html" target="frame">Pagina 2</a></li>
       <li><a href="">Pagina 3</a></li>
     </ul>
 
