:star: Add link to new page - Add new link to a new iframe to website B7Web

--- a/Exercicios/Ex024/iframe3.html
+++ b/Exercicios/Ex024/iframe3.html
@@ -25,7 +25,7 @@
     <ul>
       <li><a href="pages/pagina001.html" target="frame">Pagina 1</a></li>
       <li><a href="pages/pagina002.html" target="frame">Pagina 2</a></li>
-      <li><a href="">Pagina 3</a></li>
+      <li><a href="pages/pagina003.html" target="frame">Pagina 3</a></li>
     </ul>
 
     <p>
