:star: Add new option iframe - Add tela padrão do iframe com o recurso "srcdoc="

--- a/Exercicios/Ex024/iframe3.html
+++ b/Exercicios/Ex024/iframe3.html
@@ -32,7 +32,7 @@
       Não, disse Ron, em um tom nada convincente. Mas antes que Harry pudesse exigir ver o jornal. Draco Malfoy gritou do outro lado do Salão Principal, da mesa da Sonserina.Ei, Potter! Potter! Como está sua cabeça? Você está se sentindo bem? Tem certeza de que não vai enlouquecer conosco?Malfoy também estava segurando um exemplar do Profeta Diário. Os sonserinos de todos os lados da mesa estavam rindo, girando em seus assentos para ver a reação de Harry.
     </p>
 
-    <iframe id="tela" name="frame" src="" frameborder="1">
+    <iframe id="tela" name="frame" src="" frameborder="1" srcdoc="<h1> Escolha uma opção aê!">
       <p>Infelizmente seu navegador não é compatível</p>
     </iframe>
 
