--- a/Exercicios/Ex26Form/form.html
+++ b/Exercicios/Ex26Form/form.html
@@ -12,8 +12,8 @@
 
     <!-- inicio form  -->
     <form action="#">
-      <p>Nome: <input type="text" name="nome" id="nome"></p>
-      <p>Sobrenome: <input type="text" name="Sobrenome" id="Sobrenome"></p>
+      <p><label for="id_nome">Nome: </label><input type="text" name="nome" id="id_nome"></p>
+      <p><label for="id_sobrenome">Sobrenome:</label> <input type="text" name="Sobrenome" id="id_sobrenome"></p>
       <input type="submit" value="Enviar">
     </form>
     <!-- fim form  -->
