:pencil: Add testes de métodos de form - Teste método GET - Testa o método POST

--- a/Exercicios/Ex26Form/form.html
+++ b/Exercicios/Ex26Form/form.html
@@ -7,17 +7,17 @@
 </head>
 <body>
   <main>
+
     <!-- title page  -->
     <h1>Formulário</h1>
 
     <!-- inicio form  -->
-    <form action="#">
+    <form action="#" method="POST">
       <p><label for="id_nome">Nome: </label><input type="text" name="nome" id="id_nome"></p>
       <p><label for="id_sobrenome">Sobrenome:</label> <input type="text" name="Sobrenome" id="id_sobrenome"></p>
       <input type="submit" value="Enviar">
     </form>
     <!-- fim form  -->
-
 
   </main>
 </body>
