--- a/Exercicios/Ex005/4_eixos.html
+++ b/Exercicios/Ex005/4_eixos.html
@@ -6,12 +6,9 @@
   <style>
     div.container {
       background-color: lightsalmon;
-      height: 100px;
      
       display: flex;
-      flex-flow: row wrap;
-      align-content: space-evenly;
-
+      flex-flow: row-reverse wrap-reverse;
 
     }
     div.item {
